<resources>
    <string name="app_name">ChatterBug</string>
    <string name="hint_nick">Nickname</string>
    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_account_creation">Thank you for creating the account!</string>
    <string name="register_check_email">Please check your email inbox to confirm your account with us</string>
    <string name="action_email_verification_complete">Back to Sign In</string>
    <string name="forgot_check_email">Enter your email, then, go check your inbox for password reset</string>
    <string name="back_to_signin"> Send and Return to Sign In</string>
    <string name="action_friend_message">Message</string>
    <string name="action_friend_remove">Remove</string>
    <string name="action_friend_send_request">Send Friend Request</string>
    <string name="action_friend_accept_request">Accept Friend Request</string>
    <string name="action_friend_unsend_request">Unsend Friend Request</string>

    <string name="text_no_friends">You have no friend requests</string>
    <string name="button_no_friends">Click Here to Add Friends</string>


    <string name="title_message">Message</string>
    <string name="title_home">Home</string>
    <string name="title_weather">Weather</string>
    <string name="title_location">Location</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_friend">Friend</string>
    <string name="title_chat">%1$s</string>
    <string name="title_create_chat_members">Add People to Chat</string>
    <string name="title_create_chat_name">Chat Name</string>
    <string name="button_create_chat">Create</string>
    <string name="button_add_to_chat">Add People</string>
    <string name="title_add_friend">Add Friend</string>
    <string name="hint_chat_name">Chat Name</string>
    <string name="title_create_chat">Create Chat</string>

    <string name="base_url_service">https://tcss450-team7.herokuapp.com/</string>
    <string name="action_settings">Settings</string>
    <string name="header_account">Account</string>
    <string name="header_info">Information</string>
    <string name="edit_fname">Change First Name</string>
    <string name="edit_lname">Change Last Name</string>
    <string name="edit_nname">Change Nickname</string>
    <string name="edit_delete_account">Delete Account</string>
    <string name="button_logout">Log Out</string>
    <string name="button_change_password">Change Password</string>

    <string name="text_delete_account">Enter your email to delete your account</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="dialog_archive_chat">Archive chat?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>


</resources>