<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.tcss450.blynch99.tcss450mobileapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/contactsFragment"
        android:name="edu.uw.tcss450.blynch99.tcss450mobileapp.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.tcss450.blynch99.tcss450mobileapp.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/navigation_message"
        android:name="edu.uw.tcss450.blynch99.tcss450mobileapp.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message">
        <action
            android:id="@+id/action_messageFragment_to_contactsFragment"
            app:destination="@id/contactsFragment" />
    </fragment>
</navigation>