<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_verify_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ui.register.EmailVerificationFragment">

    <TextView
        android:id="@+id/text_email_verif"
        android:layout_width="384dp"
        android:layout_height="107dp"
        android:layout_marginBottom="256dp"
        android:gravity="center"
        android:text="@string/register_check_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_thanks"
        android:layout_width="385dp"
        android:layout_height="54dp"
        android:text="@string/hint_account_creation"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/text_email_verif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/button_verified"
        android:layout_width="176dp"
        android:layout_height="64dp"
        android:text="@string/action_email_verification_complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email_verif" />
</androidx.constraintlayout.widget.ConstraintLayout>